--- a/src/main/resources/templates/user/offers.html
+++ b/src/main/resources/templates/user/offers.html
@@ -127,7 +127,8 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
-                        <a class="dropdown-item" th:href="@{/offers}"><i class="ri-user-line align-middle me-1"></i> Offers</a>
+                        <a class="dropdown-item" href="/offers"><i class="ri-user-line align-middle me-1"></i> Offers</a>
+                        <a class="dropdown-item" href="/settings"><i class="ri-settings-2-line align-middle me-1"></i> Settings</a>
                         <div class="dropdown-divider"></div>
 
                         <form th:action="@{/logout}" th:method="POST">
@@ -168,7 +169,7 @@
                     <li>
                         <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-mail-send-line"></i>
-                            <span>Statistics</span>
+                            <span>Campaigns</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a href="/campaigns?network=TF">Traffic Factory</a></li>
@@ -180,16 +181,6 @@
                         <a id="datepicker8" th:href="@{/report}" class=" waves-effect">
                             <i class="ri-table-2"></i>
                             <span>Report</span>
-                        </a>
-                    </li>
-
-
-                    <li class="menu-title">Settings</li>
-
-                    <li>
-                        <a th:href="@{/offers}" class="active waves-effect">
-                            <i class="ri-calendar-2-line"></i>
-                            <span>Offers</span>
                         </a>
                     </li>
 
