Update TelegramBot settings

--- a/src/main/resources/templates/user/settings.html
+++ b/src/main/resources/templates/user/settings.html
@@ -263,7 +263,7 @@
                                         <div class="row mb-3">
                                             <label for="telegram-name" class="col-sm-5 col-form-label">Telegram numbers</label>
                                             <p>Add this - <a
-                                                    target="_blank" href="https://t.me/somebot">bot</a> and press "start" and enter the received numbers</p>
+                                                    target="_blank" href="https://t.me/AdsMetrikaBot">bot</a> and press "start" and enter the received numbers</p>
                                             <div class="col-sm-5">
                                                 <input th:field="${settings.telegramUsername}" th:name="${settings.telegramUsername}" th:value="${settings.getTelegramUsername()}" class="form-control" type="text" placeholder="Username"
                                                        id="telegram-name">
