Update scope - prototype

--- a/src/main/resources/templates/user/report.html
+++ b/src/main/resources/templates/user/report.html
@@ -492,9 +492,9 @@
 </div>
 <!-- /Right-bar -->
 <div th:if="${notAuthorized}" class="my-4 text-center">
-    <p class="text-muted">Center modal</p>
+    <p class="text-muted">Google SpreadSheet authorization</p>
     <!-- Small modal -->
-    <button type="button" id="button-modal" class="btn btn-primary waves-effect waves-light" data-bs-toggle="modal" data-bs-target=".bs-example-modal-center">Center modal</button>
+    <button type="button" id="button-modal" class="btn btn-primary waves-effect waves-light" data-bs-toggle="modal" data-bs-target=".bs-example-modal-center">Authorize</button>
 </div>
 <script>
     window.onload = function(){
