Singleton object for scheduling service

--- a/src/main/resources/templates/user/report.html
+++ b/src/main/resources/templates/user/report.html
@@ -510,7 +510,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Click "Authorize" then after authorization close the window</p>
+                <p>You need login to Google SpreadSheets. Click "Authorize"</p>
                 <br><br>
                 <a th:if="${notAuthorized}" class="btn btn-primary"  th:href="${notAuthorized}" >Authorize</a>
             </div>
