--- a/src/main/resources/templates/user/campaigns.html
+++ b/src/main/resources/templates/user/campaigns.html
@@ -130,7 +130,6 @@
 
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
-                        <a class="dropdown-item" href="/offers"><i class="ri-user-line align-middle me-1"></i> Offers</a>
                         <a class="dropdown-item" href="/settings"><i class="ri-settings-2-line align-middle me-1"></i> Settings</a>
 
                         <div class="dropdown-divider"></div>
@@ -496,6 +495,7 @@
 <!-- Right bar overlay-->
 <div class="rightbar-overlay"></div>
 
+
 <!-- JAVASCRIPT -->
 <script src="../assets/libs/toastr/build/toastr.min.js"></script>
 
@@ -553,6 +553,27 @@
 
 <script th:if="${error}" th:inline="javascript">
     toastr["error"]([[${error}]]);
+    toastr.options = {
+        "closeButton": false,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-top-center",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": 300,
+        "hideDuration": 1000,
+        "timeOut": 5000,
+        "extendedTimeOut": 1000,
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+</script>
+
+<script th:if="${success}" th:inline="javascript">
+    toastr["success"]([[${success}]]);
     toastr.options = {
         "closeButton": false,
         "debug": false,
