Added a selection of themes

--- a/src/main/resources/templates/user/settings.html
+++ b/src/main/resources/templates/user/settings.html
@@ -9,28 +9,30 @@
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description"/>
     <meta content="Themesdesign" name="author"/>
     <!-- App favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+    <!-- App favicon -->
+    <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/libs/toastr/build/toastr.min.css}">
 
-    <link rel="stylesheet" type="text/css" href="../assets/libs/toastr/build/toastr.min.css">
-
-    <!-- jquery.vectormap css -->
-    <link href="../assets/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet"
+    <link th:href="@{/assets/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css}" rel="stylesheet"
           type="text/css"/>
 
     <!-- DataTables -->
-    <link href="../assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet"
+    <link th:href="@{/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css}" rel="stylesheet"
           type="text/css"/>
 
     <!-- Responsive datatable examples -->
-    <link href="../assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet"
+    <link th:href="@{/assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css}" rel="stylesheet"
           type="text/css"/>
 
-    <!-- Bootstrap Css -->
-    <link href="../assets/css/bootstrap-dark.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/>
     <!-- Icons Css -->
-    <link href="../assets/css/icons.min.css" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/assets/css/icons.min.css}" rel="stylesheet" type="text/css"/>
     <!-- App Css-->
-    <link href="../assets/css/app-dark.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <script th:src="@{/assets/libs/jquery/jquery.min.js}"></script>
+
+    <link th:if="${settings.theme.name() == 'DARK'}" th:href="@{/assets/css/bootstrap-dark.min.css}" id="bootstrap-style" rel="stylesheet" type="text/css"/>
+    <link th:if="${settings.theme.name() == 'DARK'}" th:href="@{/assets/css/app-dark.min.css}" id="app-style" rel="stylesheet" type="text/css"/>
+    <link th:if="${settings.theme.name() == 'LIGHT'}" th:href="@{/assets/css/bootstrap.min.css}" id="bootstrap-style" rel="stylesheet" type="text/css"/>
+    <link th:if="${settings.theme.name() == 'LIGHT'}" th:href="@{/assets/css/app.min.css}" id="app-style" rel="stylesheet" type="text/css"/>
 
 </head>
 
@@ -256,11 +258,10 @@
                                             <input th:field="${settings.spreadSheetEnabled}" th:name="${settings.spreadSheetEnabled}" type="checkbox" class="form-check-input" id="customSwitch1" checked>
                                             <label class="form-check-label" for="customSwitch1">Enable automatic loading of statistics when receiving a report</label>
                                         </div>
-                                        <div style="padding-bottom: 30px;" class="form-check form-switch col-sm-5" dir="ltr">
+                                        <div style="padding-bottom: 50px;" class="form-check form-switch col-sm-5" dir="ltr">
                                             <input th:field="${settings.spreadSheetScheduleEnabled}" th:name="${settings.spreadSheetScheduleEnabled}" type="checkbox" class="form-check-input" id="customSwitch3" checked>
                                             <label class="form-check-label" for="customSwitch3">Activate scheduled send for Google SpreadSheets (11:00 a.m)</label>
                                         </div>
-                                        <hr>
                                         <div class="row mb-3">
                                             <label for="telegram-name" class="col-sm-5 col-form-label">Telegram digits</label>
                                             <p>Add this - <a
@@ -275,12 +276,23 @@
                                             <label class="form-check-label" for="customSwitch2">Activate scheduled send for Telegram Bot (11:00 a.m)</label>
                                         </div>
                                         <hr>
-                                        <div style="padding-bottom: 50px;" class="row mb-3">
-                                            <label for="adcombo-name" class="col-sm-5 col-form-label">Favorite offers</label>
-                                            <p>Add the offers id from Adcombo separated by commas <strong style="color: red">12345, 54321, 11223</strong></p>
+                                        <div style="padding-bottom: 30px;" class="row mb-3">
+                                            <h5>Favorite offers block</h5>
+                                            <p>Add the offers id from Adcombo separated by commas <strong style="color: red">12345,54321,11223</strong></p>
                                             <div class="col-sm-5">
                                                 <input th:field="${settings.adcomboId}" th:name="${settings.adcomboId}" th:value="${settings.getAdcomboId()}" class="form-control" type="text" placeholder="Adcombo id"
                                                        id="adcombo-name">
+                                            </div>
+                                        </div>
+                                        <hr>
+
+                                        <div style="padding-bottom: 50px;"  class="row mb-3">
+                                            <h5>Theme</h5>
+                                            <div class="col-sm-5">
+                                                <select th:field="*{theme}" class="form-select" aria-label="Choose theme">
+                                                    <option value="DARK">Dark</option>
+                                                    <option value="LIGHT">Light</option>
+                                                </select>
                                             </div>
                                         </div>
 
@@ -508,63 +520,15 @@
 </div>
 <!-- Right bar overlay-->
 <div class="rightbar-overlay"></div>
-<script>
-
-</script>
-<!-- JAVASCRIPT -->
-<script src="../assets/libs/toastr/build/toastr.min.js"></script>
-
-<!-- toastr init -->
-<script src="../assets/js/pages/toastr.init.js"></script>
 
 
+<script th:src="@{/assets/libs/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/assets/libs/metismenu/metisMenu.min.js}"></script>
 
 
-<script src="../assets/libs/jquery/jquery.min.js"></script>
-<script src="../assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/libs/metismenu/metisMenu.min.js"></script>
-<script src="../assets/libs/simplebar/simplebar.min.js"></script>
-<script src="../assets/libs/node-waves/waves.min.js"></script>
+<script th:src="@{/assets/libs/toastr/build/toastr.min.js}"></script>
+<script th:src="@{/assets/js/pages/toastr.init.js}"></script>
 
-
-
-
-<!-- apexcharts -->
-<script src="../assets/libs/apexcharts/apexcharts.min.js"></script>
-
-<!-- jquery.vectormap map -->
-<script src="../assets/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="../assets/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script>
-
-<!-- Required datatable js -->
-<script src="../assets/libs/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="../assets/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-
-<!-- Responsive examples -->
-<!--<script src="../assets/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>-->
-<!--<script src="../assets/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>-->
-
-<script src="../assets/libs/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-<script src="../assets/libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-<script src="../assets/libs/jszip/jszip.min.js"></script>
-<script src="../assets/libs/pdfmake/build/pdfmake.min.js"></script>
-<script src="../assets/libs/pdfmake/build/vfs_fonts.js"></script>
-<script src="../assets/libs/datatables.net-buttons/js/buttons.html5.min.js"></script>
-<script src="../assets/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
-<script src="../assets/libs/datatables.net-buttons/js/buttons.colVis.min.js"></script>
-
-<script src="../assets/libs/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
-<script src="../assets/libs/datatables.net-select/js/dataTables.select.min.js"></script>
-
-
-<script src="../assets/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../assets/js/pages/datatables.init.js"></script>
-<script src="../assets/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
-
-<script src="../assets/libs/toastr/build/toastr.min.js"></script>
-
-<!-- toastr init -->
-<script src="../assets/js/pages/toastr.init.js"></script>
 
 <script th:if="${param.success}" th:inline="javascript">
     toastr["success"]("Success");
