Add new ad network (TrafficStars)

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -155,7 +155,7 @@
                             <div id="login" class="hero-content">
                                 <h1 class="c-dark"> end-to-end analytics service</h1>
                                 <p class="large c-grey">To track, analyze, optimize and scale online advertising campaigns and affiliate programs in real-time.
-                                    Supports <b>ExoClick.com</b> and <b>TrafficFactory.com</b> ad networks.</p>
+                                    Supports <b>ExoClick.com</b>, <b>TrafficFactory.com</b> and <b>TrafficStars.com</b> ad networks.</p>
 
                             <div th:if="${success}">
                                 <br><br>
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <p class="large c-grey">
-                    Tracking statistics is the main job of a CPA marketer. Many advertising networks and affiliate programs do not provide an API for connecting third-party trackers. To do this, the Ads Metrika service has been created, combining statistics from advertising platforms - trafficfactory.com and exoclick.com with an affiliate network Adcombo.com                </p>
+                    Tracking statistics is the main job of a CPA marketer. Many advertising networks and affiliate programs do not provide an API for connecting third-party trackers. To do this, the Ads Metrika service has been created, combining statistics from advertising platforms - trafficfactory.com, exoclick.com and trafficstars.com with an affiliate network <b>Adcombo.com</b></p>
             </div>
         </div>
     </div>
